# oratify

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  architecture.mmd  docker-compose.yml  mvnw  oratify.py  pom.xml
app/backend/: .dockerignore  Dockerfile.dev  README.md  alembic.ini  architecture.mmd  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20260131_120000_initial_schema.py
app/backend/app/: __init__.py  main.py
app/backend/app/api/: __init__.py  auth.py  deps.py  presentations.py  sessions.py  slides.py  uploads.py  websocket.py
app/backend/app/core/: __init__.py  config.py  database.py  security.py  websocket.py
app/backend/app/models/: __init__.py  base.py  participant.py  presentation.py  response.py  session.py  slide.py  speaker.py
app/backend/app/schemas/: __init__.py  auth.py  presentation.py  session.py  slide.py  websocket.py
app/backend/app/services/: __init__.py  presentation.py  session.py  slide.py  upload.py  websocket_events.py
app/backend/scripts/: __init__.py  entrypoint.sh  seed.py
app/backend/tests/: __init__.py  conftest.py  test_auth.py  test_presentations.py  test_sessions.py  test_slides.py
docs/: backlog-tracker.md  backlog.md  prd.md
postman/: localhost 5017.postman_environment.json  localhost 5018.postman_environment.json  oratify.postman_collection.json  teamcoding.ro 5017.postman_environment.json  teamcoding.ro 5018.postman_environment.json  teamcoding.ro oratify.postman_environment.json
python/: oratify.py  (+1 more)
(+251 files in other folders)
